Fix the 'Stop' button from word-wrapping in Mavericks

--- a/FreshBooks Time Tracker.wdgtproj/project.wdgt/FreshBooks Time Tracker.css
+++ b/FreshBooks Time Tracker.wdgtproj/project.wdgt/FreshBooks Time Tracker.css
@@ -110,6 +110,7 @@ body {
     margin-left: auto;
     width: 46px;
     margin-right: auto;
+    white-space: nowrap;
 }
 
 #startbutton {
